--- a/HTML/styles.css
+++ b/HTML/styles.css
@@ -34,7 +34,7 @@ h1 {
     font-size: 60px;
 }
 
-#logo {
+#logo1 {
     text-align: center;
     
 }
@@ -42,6 +42,7 @@ h1 {
 #texto1 {
     text-align: center;
     font-size: 40px;
+    color: white;
 }
 
 #botão-abrir-conta {
@@ -56,16 +57,19 @@ h1 {
     border-radius: 20px;
     padding: 5px;
     width: 210px;
+    
 }
 
 #conta-digital {
     text-align: center;
     color: white;
     font-weight: bold;
+    padding: 5px;
 }
 
 #conta {
-    font-size: 30px;
+    color: white;
+    font-size: 25px;
 }
 
 #baixar-app {
@@ -79,17 +83,19 @@ h1 {
 }
 
 #app {
-    border-radius: 30px;
+    border-radius: 60px;
 }
 
 #cartão-crédito {
-   color: white; 
+   background-color: white; 
    text-align: center;
    font-weight: bold;
+   padding: 5px;
 }
 
 #cartão {
-    font-size: 30px;
+    color: black;
+    font-size: 25px;
 }
 
 #peça-já {
@@ -102,10 +108,52 @@ h1 {
     width: 210px; 
 }
 
-h2 {
-    color:rgb(255, 255, 255)
+#rodapé {
+    text-align: center;
+    font-size: 15px;
 }
 
-p {
-    color: #cec9c9;
+#links {
+    text-align: center;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+#infos {
+    color: white;
+    font-size: 10px;
+}
+
+#texto2 {
+    color: white;
+    font-size: 40px;
+}
+
+#logo2 {
+    text-align: center;
+}
+
+#formulário {
+    display: inline-block;
+    background-color: white;
+    color: rgb(90, 90, 90);
+    font-weight: bold;
+    font-size: 20px;
+    padding: 25px;
+}
+
+#enviar {
+    text-align: center;
+    background-color: red;
+    color: white;
+    font-size: 20px;
+    border-radius: 20px;
+    padding: 5px;
+    width: 150px;
+}
+
+#equipe {
+    text-align: center;
+    color: black;
+    background-color: white;
 }
