--- a/HTML/styles.css
+++ b/HTML/styles.css
@@ -55,6 +55,7 @@ h1 {
     color: white;
     font-size: 20px;
     border-radius: 20px;
+    border-color: white;
     padding: 5px;
     width: 210px;
     
@@ -78,12 +79,13 @@ h1 {
     color: white;
     font-size: 20px;
     border-radius: 20px;
+    border-color: white;
     padding: 5px;
     width: 210px;
 }
 
 #app {
-    border-radius: 60px;
+    border-radius: 35px;
 }
 
 #cartão-crédito {
@@ -91,6 +93,10 @@ h1 {
    text-align: center;
    font-weight: bold;
    padding: 5px;
+}
+
+#credit-card {
+    border-radius: 25px;
 }
 
 #cartão {
@@ -117,6 +123,17 @@ h1 {
     text-align: center;
     font-weight: bold;
     font-size: 20px;
+    background-color: black;
+    color: white;
+}
+
+#pginicial {
+    background-color: white;
+    color: red;
+    text-align: center;
+    font-weight: bold;
+    font-size: 15px;
+    padding: 10px;
 }
 
 #infos {
@@ -129,17 +146,24 @@ h1 {
     font-size: 40px;
 }
 
+main {
+    display: flex;
+}
+
 #logo2 {
     text-align: center;
+    width: 50vw;
 }
 
 #formulário {
-    display: inline-block;
+    
+    display: 1;
     background-color: white;
     color: rgb(90, 90, 90);
     font-weight: bold;
     font-size: 20px;
     padding: 25px;
+    width: 50vw;
 }
 
 #enviar {
