--- a/HTML/styles.css
+++ b/HTML/styles.css
@@ -18,6 +18,11 @@ body {
     text-align: right;
     background-color: red;
 }
+#acessar a:visited {
+    background-color: red;
+    color: white;
+
+}
 
 #botão-acessar {
     text-align: right;
@@ -43,6 +48,11 @@ h1 {
     text-align: center;
     font-size: 40px;
     color: white;
+}
+#texto1 a:visited {
+    color: white;
+    background-color: black;
+
 }
 
 #botão-abrir-conta {
