--- a/HTML/styles.css
+++ b/HTML/styles.css
@@ -221,3 +221,9 @@ main {
     padding: 5px;
     width: 150px;
 }
+
+@media only screen and (max-width: 480px) {
+    img {
+      width: 100%;
+    }
+  }
