--- a/HTML/styles.css
+++ b/HTML/styles.css
@@ -227,3 +227,27 @@ main {
       width: 100%;
     }
   }
+
+  /* Adicione um estilo para o link dentro do botão */
+#botão-abrir-conta {
+    text-align: center;
+}
+
+.botão-link {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    text-decoration: none;
+    background-color: #ff0000; /* Cor de fundo do botão */
+    color: #ffffff; /* Cor do texto do botão */
+    border: 1px solid #ffffff; /* Borda do botão */
+    border-radius: 5px; /* Cantos arredondados */
+    transition: background-color 0.3s ease; /* Transição suave de cor de fundo */
+
+}
+
+/* Adicione um estilo de hover para o efeito visual quando o mouse passa sobre o botão */
+.botão-link:hover {
+    background-color: #b30000; /* Nova cor de fundo ao passar o mouse */
+    border-color: #fdfdfd; /* Nova cor da borda ao passar o mouse */
+}
