--- a/HTML/styles.css
+++ b/HTML/styles.css
@@ -38,10 +38,11 @@ header {
 #botão-acessar  {
     color: black ;
     text-align: right;
-    padding: 12px;
-    font-size: 12px;
+    padding: 10px;
+    font-size: 10px;
     font-weight: bold;
-    margin-top: -5px;
+    margin-top: -1px;
+  
 }
 
 #botão-acessar :visited {
@@ -53,6 +54,21 @@ a {
     color:black;
     text-decoration: none;
 }
+#botão-acessar a {
+    color: black;
+    text-align: right;
+}
+
+#botão-acessar button {
+    padding: 12px 15px; /* Ajuste o valor conforme necessário para aumentar a área clicável */
+    font-size: 12px;
+    font-weight: bold;
+}
+
+#botão-acessar a:visited {
+    color: black;
+}
+
 
 
 h1 {
@@ -121,6 +137,11 @@ h1 {
     padding: 5px;
     width: 210px;
 }
+
+#baixar-app :visited  {
+    color: white;
+   }
+
 
 #app {
     border-radius: 35px;
