--- a/HTML/styles.css
+++ b/HTML/styles.css
@@ -138,6 +138,16 @@ h1 {
     font-size: 25px;
 }
 
+#conta2 {
+    color: white;
+    font-size: 25px;
+}
+
+#conta3 {
+    color: white;
+    font-size: 25px;
+}
+
 #baixar-app {
     text-align: center;
     background-color: red;
