--- a/HTML/styles.css
+++ b/HTML/styles.css
@@ -263,6 +263,21 @@ h1 {
 }
 
 
+#links5  {
+    text-align: center;
+    font-weight: bold;
+    font-size: 20px;
+    background-color: black;
+    color: white;
+}
+
+#links a:visited {
+    color: white;
+}
+
+
+
+
 #pginicial {
     background-color: white;
     color: red;
