--- a/HTML/estilo.css
+++ b/HTML/estilo.css
@@ -108,7 +108,7 @@ a {
 
 /* Estilo quando o mouse passa por cima do link */
 .homee:hover {
-    background-color: #2980b9; /* Cor de fundo alterada quando hover */
+    background-color: #ffffff; /* Cor de fundo alterada quando hover */
 }
 
 #links  {
