--- a/HTML/styles.css
+++ b/HTML/styles.css
@@ -404,3 +404,13 @@ main {
 .inicio:hover {
     background-color: #ffffff; /* Cor de fundo alterada quando hover */
 }
+
+#loginn {
+    display: inline;
+    background-color: white;
+    color: rgb(90, 90, 90);
+    font-weight: bold;
+    font-size: 20px;
+    padding: 25px;
+    width: 50vw;
+}
