Integração com o backend e o banco de Dados

--- a/HTML/acesso/style.css
+++ b/HTML/acesso/style.css
@@ -119,6 +119,11 @@ main {
   text-decoration: none;
 }
 
+#excluir {
+  color: rgb(255, 0, 0);
+  text-decoration: none;
+}
+
 #acessos1 {
   text-decoration: none;
   color: black;
@@ -168,7 +173,7 @@ main {
     margin-top: 1em; /* Reduza a margem superior para telas menores */
   }
 }
-css Copy code body {
+body {
   font-size: 16px; /* Defina um tamanho de fonte padrão no corpo do documento */
 }
 
@@ -182,6 +187,13 @@ header {
 
 footer {
   font-size: 0.75em; /* 0.75 vezes o tamanho padrão do corpo */
+}
+
+#mensagem-confirmacao {
+  background-color: #ffffff; /* Cor verde para indicar sucesso */
+  color: white;
+  padding: 10px;
+  margin-bottom: 15px;
 }
 
 /*# sourceMappingURL=style.css.map */
