--- a/HTML/acesso/adm.scss
+++ b/HTML/acesso/adm.scss
@@ -60,10 +60,16 @@ header {
 #crud-usuarios {
     background-color: #ffffff;
     border-radius: 0px;
-    padding: 100px;
+    padding: 10%;
     box-shadow: 0 0 10px rgba(206, 18, 18, 0.1);
     max-width: 100%;
     margin: 0 auto;
+}
+
+@media (max-width: 400px) {
+    #crud-usuarios {
+        padding: 20px;
+    }
 }
 
 h2 {
